--- a/home_fix/users/templates/users/locs.html
+++ b/home_fix/users/templates/users/locs.html
@@ -1,5 +1,5 @@
-{% extends "authentication/layout.html" %}
-{% block title %}Auth | Homefix{% endblock %}
+{% extends "users/layout.html" %}
+{% block title %}Location | Homefix{% endblock %}
 {% block body %}
 <style>
 #map {
