--- a/home_fix/users/templates/users/pricing.html
+++ b/home_fix/users/templates/users/pricing.html
@@ -1,4 +1,4 @@
-{% extends "authentication/layout.html" %}
+{% extends "users/layout.html" %}
 {% block head %}
     <style>
         .bd-placeholder-img {
@@ -58,7 +58,7 @@
                                 <li>Email support</li>
                                 <li>Help center access</li>
                             </ul>
-                              <form action="{% url 'authentication:pricing' %}" method="post">
+                              <form action="{% url 'users:pricing' %}" method="post">
                                   {% csrf_token %}
                             <button type="submit" class="w-100 btn btn-lg btn-outline-primary" value="0" name="tier">Sign up for free</button>
                               </form>
@@ -79,7 +79,7 @@
                                 <li>Priority email support</li>
                                 <li>Help center access</li>
                             </ul>
-                              <form action="{% url 'authentication:pricing' %}" method="post">
+                              <form action="{% url 'users:pricing' %}" method="post">
                                   {% csrf_token %}
                             <button type="submit" value="1" class="w-100 btn btn-lg btn-primary"  name="tier">Get started</button>
                               </form>
@@ -100,7 +100,7 @@
                                 <li>Phone and email support</li>
                                 <li>Help center access</li>
                             </ul>
-                              <form action="{% url 'authentication:pricing' %}" method="post">
+                              <form action="{% url 'users:pricing' %}" method="post">
                                   {% csrf_token %}
                             <button type="button" value="2" class="w-100 btn btn-lg btn-primary"  name="tier">Contact us</button>
                               </form>
