--- a/home_fix/users/templates/users/layout.html
+++ b/home_fix/users/templates/users/layout.html
@@ -25,7 +25,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{% static 'authentication/login.css' %}"/>
+    <link rel="stylesheet" href="{% static 'users/login.css' %}"/>
 
     {% block head %}{% endblock %}
     <title>{% block title %}{% endblock %}</title>
