--- a/home_fix/users/templates/users/pricing.html
+++ b/home_fix/users/templates/users/pricing.html
@@ -15,7 +15,7 @@
             }
         }
 
-        .container {
+        .container-fluid {
             max-width: 960px;
         }
 
@@ -23,6 +23,7 @@
             max-width: 700px;
         }
     </style>
+    <script src="https://js.stripe.com/v3/"></script>
 {% endblock %}
 {% block title %}Pricing | Homefix{% endblock %}
 {% block body %}
@@ -32,10 +33,10 @@
             <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
         </symbol>
     </svg>
-    <div class="container py-3">
+    <div class="container-fluid py-3">
         <header>
             <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-                <h1 class="display-4 fw-normal">Pricing</h1>
+                <h1 class="display-6 fw-normal">Choose the plan that's right for you</h1>
                 <p class="fs-5 text-muted">Quickly build an effective pricing table for your potential customers with
                     this Bootstrap example. It’s built with default Bootstrap components and utilities with little
                     customization.</p>
@@ -58,10 +59,13 @@
                                 <li>Email support</li>
                                 <li>Help center access</li>
                             </ul>
-                              <form action="{% url 'users:pricing' %}" method="post">
-                                  {% csrf_token %}
-                            <button type="submit" class="w-100 btn btn-lg btn-outline-primary" value="0" name="tier">Sign up for free</button>
-                              </form>
+                            <form action="{% url 'users:pricing' %}" method="post">
+                                {% csrf_token %}
+                                {#                                <button type="button" id="checkout-button" class="w-100 btn btn-lg btn-outline-primary">Checkout</button>#}
+                                <button type="submit" class="w-100 btn btn-lg btn-outline-primary" value="0" name="tier"
+                                >Select
+                                </button>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -71,7 +75,7 @@
                             <h4 class="my-0 fw-normal">Pro</h4>
                         </div>
                         <div class="card-body">
-                            <h1 class="card-title pricing-card-title">$15<small class="text-muted fw-light">/mo</small>
+                            <h1 class="card-title pricing-card-title">$100<small class="text-muted fw-light">/yr</small>
                             </h1>
                             <ul class="list-unstyled mt-3 mb-4">
                                 <li>20 users included</li>
@@ -79,20 +83,24 @@
                                 <li>Priority email support</li>
                                 <li>Help center access</li>
                             </ul>
-                              <form action="{% url 'users:pricing' %}" method="post">
-                                  {% csrf_token %}
-                            <button type="submit" value="1" class="w-100 btn btn-lg btn-primary"  name="tier">Get started</button>
-                              </form>
+                            {#                            <form action="{% url 'users:pricing' %}" method="post">#}
+                            {#                                {% csrf_token %}#}
+                            <button type="button" id="checkout-button" class="w-100 btn btn-lg btn-primary">Select
+                            </button>
+                            {#                                <button type="submit" value="1" class="w-100 btn btn-lg btn-primary" name="tier">Get#}
+                            {#                                    started#}
+                            {#                                </button>#}
+                            {#                            </form>#}
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="card mb-4 rounded-3 shadow-sm border-primary">
                         <div class="card-header py-3 text-white bg-primary border-primary">
-                            <h4 class="my-0 fw-normal">Enterprise</h4>
+                            <h4 class="my-0 fw-normal">Professional</h4>
                         </div>
                         <div class="card-body">
-                            <h1 class="card-title pricing-card-title">$29<small class="text-muted fw-light">/mo</small>
+                            <h1 class="card-title pricing-card-title">$150<small class="text-muted fw-light">/yr</small>
                             </h1>
                             <ul class="list-unstyled mt-3 mb-4">
                                 <li>30 users included</li>
@@ -100,10 +108,12 @@
                                 <li>Phone and email support</li>
                                 <li>Help center access</li>
                             </ul>
-                              <form action="{% url 'users:pricing' %}" method="post">
-                                  {% csrf_token %}
-                            <button type="button" value="2" class="w-100 btn btn-lg btn-primary"  name="tier">Contact us</button>
-                              </form>
+                            <form action="{% url 'users:pricing' %}" method="post">
+                                {% csrf_token %}
+                                {#                                <button type="button" class="checkout-button w-100 btn btn-lg btn-primary">Select</button>#}
+                                <button type="button" value="2" class="w-100 btn btn-lg btn-primary" name="tier">Select
+                                </button>
+                            </form>
                         </div>
                     </div>
                 </div>
@@ -117,7 +127,7 @@
                         <th style="width: 34%;"></th>
                         <th style="width: 22%;">Free</th>
                         <th style="width: 22%;">Pro</th>
-                        <th style="width: 22%;">Enterprise</th>
+                        <th style="width: 22%;">Professional</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -217,4 +227,55 @@
             </div>
         </main>
     </div>
+
+    {#  Footer #}
+    <footer class="bg-dark py-4 mt-auto">
+        <div class="container px-5">
+            <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+                <div class="col-auto">
+                    <div class="small m-0 text-white">Copyright &copy; Homefix 2022</div>
+                </div>
+                <div class="col-auto">
+                    <a class="link-light small" href="#!">Privacy</a>
+                    <span class="text-white mx-1">&middot;</span>
+                    <a class="link-light small" href="#!">Terms</a>
+                    <span class="text-white mx-1">&middot;</span>
+                    <a class="link-light small" href="#!">Contact</a>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script type="text/javascript">
+        const csrftoken = document.querySelector("[name=csrfmiddlewaretoken]")
+            .value;
+        // Create an instance of the Stripe object with your publishable API key
+        var stripe = Stripe("pk_test_51KhkjnHgOFOjKM17Kvs8VZysMnxPrTWwhexv5g4lgq1hOlb1n4X1txtXzwUBaXVxdDKXmOxWIAv5di4i1oQNcJUL00AjqBdVSr");
+        var checkoutButton = document.getElementById("checkout-button");
+        checkoutButton.addEventListener("click", function () {
+            fetch("{% url 'create-checkout-session' %}", {
+                method: "POST",
+                headers: {
+                    "X-CSRFToken": csrftoken,
+                },
+            })
+                .then(function (response) {
+                    return response.json();
+                })
+                .then(function (session) {
+                    return stripe.redirectToCheckout({sessionId: session.id});
+                })
+                .then(function (result) {
+                    // If redirectToCheckout fails due to a browser or network
+                    // error, you should display the localized error message to your
+                    // customer using error.message.
+                    if (result.error) {
+                        alert(result.error.message);
+                    }
+                })
+                .catch(function (error) {
+                    console.error("Error:", error);
+                });
+        });
+    </script>
 {% endblock %}
