--- a/home_fix/users/templates/users/layout.html
+++ b/home_fix/users/templates/users/layout.html
@@ -31,6 +31,62 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
+<!--Navbar-->
+<header class="p-3 bg-dark text-white shadow p-3 mb-4">
+    <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <a class="navbar-brand" href="{% url 'users:index' %}" style="color: white;">
+                <strong><i class="fa-solid fa-screwdriver-wrench"></i> Homefix</strong>
+            </a>
+
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                <li><a href="#" class="nav-link px-2 text-white">Maps</a></li>
+                <li><a href="{% url 'users:pricing' %}" class="nav-link px-2 text-white">Pricing</a></li>
+                <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
+                <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+            </ul>
+
+            {% if user.is_authenticated %}
+
+                <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+                    <input type="search" class="form-control form-control-dark" placeholder="Search..."
+                           aria-label="Search">
+                </form>
+
+                <div class="dropdown text-end">
+                    <a href="#" class="d-block link-light text-decoration-none dropdown-toggle"
+                       id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+                        <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32"
+                             class="rounded-circle">
+                    </a>
+                    <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
+                        <li><a class="dropdown-item" href="#">Settings</a></li>
+                        <li><a class="dropdown-item" href="{% url 'users:profile' %}">Profile</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li><a class="dropdown-item" href="{% url 'users:logout' %}">
+                            <i class="fa-solid fa-arrow-right-from-bracket"></i> Logout
+                        </a>
+                        </li>
+                    </ul>
+                </div>
+
+            {% else %}
+
+                <div class="text-end">
+                    <button type="button" class="btn btn-outline-light me-2"
+                            onclick="location.href='{% url 'users:login' %}'">Login
+                    </button>
+                    <button type="button" class="btn btn-warning"
+                            onclick="location.href='{% url 'users:register' %}'">Sign-up
+                    </button>
+                </div>
+
+            {% endif %}
+        </div>
+    </div>
+</header>
 {% block body %} {% endblock %}
 
 <!-- Bootstrap Scripts -->
