--- a/home_fix/users/templates/users/request_services.html
+++ b/home_fix/users/templates/users/request_services.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block head %}
 {% endblock %}
-{% block title %}Home | Homefix{% endblock %}
+{% block title %}Request Services | Homefix{% endblock %}
 {% block body %}
     <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
         <symbol id="bootstrap" viewBox="0 0 118 94">
@@ -71,190 +71,138 @@
         </symbol>
     </svg>
 
-    <!--Navbar-->
-    <header class="p-3 bg-dark text-white shadow p-3 mb-5">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <a class="navbar-brand" href="{% url 'users:index' %}" style="color: white;">
-                    <strong><i class="fa-solid fa-screwdriver-wrench"></i> Homefix</strong>
-                </a>
+    <!-- Hero Section  -->
+    <style>
+        #myInput {
+            background-image: url('/css/searchicon.png');
+            background-position: 10px 12px;
+            background-repeat: no-repeat;
+            width: 60%;
+            font-size: 16px;
+            padding: 12px 20px 12px 40px;
+            border: 1px solid #ddd;
+            margin-bottom: 12px;
+        }
+    </style>
 
-                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">About</a></li>
-                </ul>
-
-                {% if user.is_authenticated %}
-
-                    <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-                        <input type="search" class="form-control form-control-dark" placeholder="Search..."
-                               aria-label="Search">
-                    </form>
-
-                    <div class="dropdown text-end">
-                        <a href="#" class="d-block link-light text-decoration-none dropdown-toggle"
-                           id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-                            <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32"
-                                 class="rounded-circle">
-                        </a>
-                        <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
-                            <li><a class="dropdown-item" href="#">Settings</a></li>
-                            <li><a class="dropdown-item" href="{% url 'users:profile' %}">Profile</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="{% url 'users:logout' %}">
-                                <i class="fa-solid fa-arrow-right-from-bracket"></i> Logout
-                            </a>
-                            </li>
-                        </ul>
-                    </div>
-
-                {% else %}
-
-                    <div class="text-end">
-                        <button type="button" class="btn btn-outline-light me-2"
-                                onclick="location.href='{% url 'users:login' %}'">Login
-                        </button>
-                        <button type="button" class="btn btn-warning"
-                                onclick="location.href='{% url 'users:register' %}'">Sign-up
-                        </button>
-                    </div>
-
-                {% endif %}
-            </div>
-        </div>
-    </header>
-
-<!-- Hero Section  -->
-<style>
-#myInput {
-  background-image: url('/css/searchicon.png');
-  background-position: 10px 12px;
-  background-repeat: no-repeat;
-  width: 60%;
-  font-size: 16px;
-  padding: 12px 20px 12px 40px;
-  border: 1px solid #ddd;
-  margin-bottom: 12px;
-}
-</style>
-
-<center>
-    <h1 class="display-5 fw-bold lead mb-4">SEARCH SERVICES</h1>
-    <input type="text" id="myInput" onkeyup="mySearchFunction()" placeholder="Search for service.." title="Type Some Services" style="border-radius: 20px;">
-</center>
+    <center>
+        <h1 class="display-5 fw-bold lead mb-4">SEARCH SERVICES</h1>
+        <input type="text" id="myInput" onkeyup="mySearchFunction()" placeholder="Search for service.."
+               title="Type Some Services" style="border-radius: 20px;">
+    </center>
 
 
-<!-- HARD CODED THE POSTS THAT HAVE TO BE CREATED DYNAMICALLY LATER USING JS/PY-->
-  <a class="service" style="text-decoration: None; color: black; padding:1%" name="Plumbing">
-    <div class="card shadow border-0 col-md-8 offset-md-2" onclick="alert('YET TO BUILD')" style="width: 65%">
-        <div class="card-body p-4">
-            <div class="badge bg-success bg-gradient rounded-pill mb-2 offset-md-1">PLUMBING</div>
+    <!-- HARD CODED THE POSTS THAT HAVE TO BE CREATED DYNAMICALLY LATER USING JS/PY-->
+    <a class="service" style="text-decoration: None; color: black; padding:1%" name="Plumbing">
+        <div class="card shadow border-0 col-md-8 offset-md-2" onclick="alert('YET TO BUILD')" style="width: 65%">
+            <div class="card-body p-4">
+                <div class="badge bg-success bg-gradient rounded-pill mb-2 offset-md-1">PLUMBING</div>
                 <div class="h5 card-title mb-3 col-md-8 offset-md-2">Plumbing Service for 20 coins!</div>
-            <p class="card-text mb-0 col-md-8 offset-md-2">
-                Hi, I am here to offer the service this month in the weekends for anything around 20-30 coins (depending on the distance to travel).
-             </p>
-        </div>
-        <div class="card-footer p-4 pt-0 bg-transparent border-top-0 col-md-4 offset-md-1">
-            <div class="d-flex align-items-end justify-content-between">
-                <div class="d-flex align-items-center">
-                    <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d"
-                         alt="..."/>
-                    <div class="small">
-                        <div class="fw-bold">Kelly Rowan</div>
-                        <div class="text-muted">March 12, 2022</div>
+                <p class="card-text mb-0 col-md-8 offset-md-2">
+                    Hi, I am here to offer the service this month in the weekends for anything around 20-30 coins
+                    (depending on the distance to travel).
+                </p>
+            </div>
+            <div class="card-footer p-4 pt-0 bg-transparent border-top-0 col-md-4 offset-md-1">
+                <div class="d-flex align-items-end justify-content-between">
+                    <div class="d-flex align-items-center">
+                        <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d"
+                             alt="..."/>
+                        <div class="small">
+                            <div class="fw-bold">Kelly Rowan</div>
+                            <div class="text-muted">March 12, 2022</div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-  </a>
+    </a>
 
-  <a class="service" style="text-decoration: None; color: black; padding:1%" name="wall fixing">
-      <div class="card shadow border-0 col-md-8 offset-md-2" onclick="alert('YET TO BUILD')" style="width: 65%">
-        <div class="card-body p-4">
-            <div class="badge bg-success bg-gradient rounded-pill mb-2 offset-md-1">WALL FIXING</div>
+    <a class="service" style="text-decoration: None; color: black; padding:1%" name="wall fixing">
+        <div class="card shadow border-0 col-md-8 offset-md-2" onclick="alert('YET TO BUILD')" style="width: 65%">
+            <div class="card-body p-4">
+                <div class="badge bg-success bg-gradient rounded-pill mb-2 offset-md-1">WALL FIXING</div>
                 <div class="h5 card-title mb-3 col-md-8 offset-md-2">Painting/Fixing the wall for 40 coins!</div>
-            <p class="card-text mb-0 col-md-8 offset-md-2">I have some leftover white paints. If you need them, please hit me up. Only 40 coins for the service!</p>
-        </div>
-        <div class="card-footer p-4 pt-0 bg-transparent border-top-0 col-md-4 offset-md-1">
-            <div class="d-flex align-items-end justify-content-between">
-                <div class="d-flex align-items-center">
-                    <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d"
-                         alt="..."/>
-                    <div class="small">
-                        <div class="fw-bold">John Dawn</div>
-                        <div class="text-muted">March 03, 2022</div>
+                <p class="card-text mb-0 col-md-8 offset-md-2">I have some leftover white paints. If you need them,
+                    please hit me up. Only 40 coins for the service!</p>
+            </div>
+            <div class="card-footer p-4 pt-0 bg-transparent border-top-0 col-md-4 offset-md-1">
+                <div class="d-flex align-items-end justify-content-between">
+                    <div class="d-flex align-items-center">
+                        <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d"
+                             alt="..."/>
+                        <div class="small">
+                            <div class="fw-bold">John Dawn</div>
+                            <div class="text-muted">March 03, 2022</div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-      </div>
-  </a>
+    </a>
 
-  <a class="service" style="text-decoration: None; color: black; padding:1%" name="wall fixing">
-      <div class="card col-md-8 offset-md-2 shadow border-0" onclick="alert('YET TO BUILD')" style="width: 65%">
-        <div class="card-body p-4">
-            <div class="badge bg-success bg-gradient rounded-pill mb-2 offset-md-1">WALL FIXING</div>
+    <a class="service" style="text-decoration: None; color: black; padding:1%" name="wall fixing">
+        <div class="card col-md-8 offset-md-2 shadow border-0" onclick="alert('YET TO BUILD')" style="width: 65%">
+            <div class="card-body p-4">
+                <div class="badge bg-success bg-gradient rounded-pill mb-2 offset-md-1">WALL FIXING</div>
                 <div class="h5 card-title mb-3 col-md-8 offset-md-2">Wall Painting for 50 coins!</div>
-            <p class="card-text mb-0 col-md-8 offset-md-2">Over here to fix some walls with a brand new unused paints. Multicolors available. 50 Coins for the service!</p>
-        </div>
-        <div class="card-footer p-4 pt-0 bg-transparent border-top-0 col-md-4 offset-md-1">
-            <div class="d-flex align-items-end justify-content-between">
-                <div class="d-flex align-items-center">
-                    <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d"
-                         alt="..."/>
-                    <div class="small">
-                        <div class="fw-bold">Bob Stanley</div>
-                        <div class="text-muted">Feb 22, 2022</div>
+                <p class="card-text mb-0 col-md-8 offset-md-2">Over here to fix some walls with a brand new unused
+                    paints. Multicolors available. 50 Coins for the service!</p>
+            </div>
+            <div class="card-footer p-4 pt-0 bg-transparent border-top-0 col-md-4 offset-md-1">
+                <div class="d-flex align-items-end justify-content-between">
+                    <div class="d-flex align-items-center">
+                        <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d"
+                             alt="..."/>
+                        <div class="small">
+                            <div class="fw-bold">Bob Stanley</div>
+                            <div class="text-muted">Feb 22, 2022</div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-      </div>
-  </a>
+    </a>
 
-  <a class="service" style="text-decoration: None; color: black; padding:1%" name="household">
-      <div class="card col-md-8 offset-md-2 shadow border-0" onclick="alert('YET TO BUILD')" style="width: 65%">
-        <div class="card-body p-4">
-            <div class="badge bg-success bg-gradient rounded-pill mb-2 offset-md-1">HOUSEHOLD APPLIANCES</div>
+    <a class="service" style="text-decoration: None; color: black; padding:1%" name="household">
+        <div class="card col-md-8 offset-md-2 shadow border-0" onclick="alert('YET TO BUILD')" style="width: 65%">
+            <div class="card-body p-4">
+                <div class="badge bg-success bg-gradient rounded-pill mb-2 offset-md-1">HOUSEHOLD APPLIANCES</div>
                 <div class="h5 card-title mb-3 col-md-8 offset-md-2">Any small appliance for 30 coins!</div>
-            <p class="card-text mb-0 col-md-8 offset-md-2">I am a part time electrician. I can come around in weekends and help you in fixing your household appliances.</p>
-        </div>
-        <div class="card-footer p-4 pt-0 bg-transparent border-top-0 col-md-4 offset-md-1">
-            <div class="d-flex align-items-end justify-content-between">
-                <div class="d-flex align-items-center">
-                    <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d"
-                         alt="..."/>
-                    <div class="small">
-                        <div class="fw-bold">Cindy Romans</div>
-                        <div class="text-muted">March 20, 2022</div>
+                <p class="card-text mb-0 col-md-8 offset-md-2">I am a part time electrician. I can come around in
+                    weekends and help you in fixing your household appliances.</p>
+            </div>
+            <div class="card-footer p-4 pt-0 bg-transparent border-top-0 col-md-4 offset-md-1">
+                <div class="d-flex align-items-end justify-content-between">
+                    <div class="d-flex align-items-center">
+                        <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d"
+                             alt="..."/>
+                        <div class="small">
+                            <div class="fw-bold">Cindy Romans</div>
+                            <div class="text-muted">March 20, 2022</div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-      </div>
-  </a>
+    </a>
 
-<!-- JS FOR DYNAMIC SEARCH -->
+    <!-- JS FOR DYNAMIC SEARCH -->
     <script>
-    function mySearchFunction() {
-        var input, filter, ul, li, a, i, txtValue;
-        input = document.getElementById("myInput");
-        filter = input.value.toUpperCase();    
-        var elements = document.getElementsByClassName("service");
-        for(var i = 0; i < elements.length; i++) {
-            txtValue=elements[i].name;
-            if (txtValue.toUpperCase().indexOf(filter) > -1) {
-                elements[i].style.display = "";
-            } else {
-                elements[i].style.display = "none";
+        function mySearchFunction() {
+            var input, filter, ul, li, a, i, txtValue;
+            input = document.getElementById("myInput");
+            filter = input.value.toUpperCase();
+            var elements = document.getElementsByClassName("service");
+            for (var i = 0; i < elements.length; i++) {
+                txtValue = elements[i].name;
+                if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                    elements[i].style.display = "";
+                } else {
+                    elements[i].style.display = "none";
+                }
             }
         }
-    }
     </script>
 
     {#  Footer #}
