--- a/home_fix/users/templates/users/homepage.html
+++ b/home_fix/users/templates/users/homepage.html
@@ -89,7 +89,7 @@
                     Services
                 </button>
                 <button type="button" class="btn btn-outline-dark btn-lg px-4"
-                        onclick="location.href='{% url 'users:requestServices' %}'">Request Services
+                        onclick="location.href='{% url 'users:request_service' %}'">Request Services
                 </button>
             </div>
         </div>
