Modify payment page

--- a/home_fix/users/templates/users/set_location.html
+++ b/home_fix/users/templates/users/set_location.html
@@ -104,7 +104,8 @@
                 });
                 document.getElementById("switcher").style.display = "block";
             });
+        }
     </script>
-    <script async
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1REQSuSVU372fX246ZMlahmJyg53GSno&libraries=places&callback=initMap"></script>
+
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1REQSuSVU372fX246ZMlahmJyg53GSno&libraries=places&callback=initMap"></script>
 {% endblock %}
