--- a/home_fix/users/templates/users/pricing.html
+++ b/home_fix/users/templates/users/pricing.html
@@ -72,7 +72,7 @@
                 <div class="col">
                     <div class="card mb-4 rounded-3 shadow-sm">
                         <div class="card-header py-3">
-                            <h4 class="my-0 fw-normal">Pro</h4>
+                            <h4 class="my-0 fw-normal">Starter</h4>
                         </div>
                         <div class="card-body">
                             <h1 class="card-title pricing-card-title">$100<small class="text-muted fw-light">/yr</small>
@@ -85,7 +85,8 @@
                             </ul>
                             {#                            <form action="{% url 'users:pricing' %}" method="post">#}
                             {#                                {% csrf_token %}#}
-                            <button type="button" id="checkout-button" class="w-100 btn btn-lg btn-primary">Select
+                            <button type="button" onclick="location.href='https://buy.stripe.com/test_14k4j5gwW0b6aSk4gh'"
+                                    class="w-100 btn btn-lg btn-primary">Select
                             </button>
                             {#                                <button type="submit" value="1" class="w-100 btn btn-lg btn-primary" name="tier">Get#}
                             {#                                    started#}
@@ -108,12 +109,14 @@
                                 <li>Phone and email support</li>
                                 <li>Help center access</li>
                             </ul>
-                            <form action="{% url 'users:pricing' %}" method="post">
-                                {% csrf_token %}
-                                {#                                <button type="button" class="checkout-button w-100 btn btn-lg btn-primary">Select</button>#}
-                                <button type="button" value="2" class="w-100 btn btn-lg btn-primary" name="tier">Select
-                                </button>
-                            </form>
+                            {#                            <form action="{% url 'users:pricing' %}" method="post">#}
+                            {#                                {% csrf_token %}#}
+                            <button type="button" onclick="location.href='https://buy.stripe.com/test_eVabLxfsS7Dy7G86oo'"
+                                    class="w-100 btn btn-lg btn-primary">Select
+                            </button>
+                            {#                                <button type="button" value="2" class="w-100 btn btn-lg btn-primary" name="tier">Select#}
+                            {#                                </button>#}
+                            {#                            </form>#}
                         </div>
                     </div>
                 </div>
@@ -126,7 +129,7 @@
                     <tr>
                         <th style="width: 34%;"></th>
                         <th style="width: 22%;">Free</th>
-                        <th style="width: 22%;">Pro</th>
+                        <th style="width: 22%;">Starter</th>
                         <th style="width: 22%;">Professional</th>
                     </tr>
                     </thead>
@@ -246,36 +249,33 @@
         </div>
     </footer>
 
-    <script type="text/javascript">
-        const csrftoken = document.querySelector("[name=csrfmiddlewaretoken]")
-            .value;
-        // Create an instance of the Stripe object with your publishable API key
-        var stripe = Stripe("pk_test_51KhkjnHgOFOjKM17Kvs8VZysMnxPrTWwhexv5g4lgq1hOlb1n4X1txtXzwUBaXVxdDKXmOxWIAv5di4i1oQNcJUL00AjqBdVSr");
-        var checkoutButton = document.getElementById("checkout-button");
-        checkoutButton.addEventListener("click", function () {
-            fetch("{% url 'create-checkout-session' %}", {
-                method: "POST",
-                headers: {
-                    "X-CSRFToken": csrftoken,
-                },
-            })
-                .then(function (response) {
-                    return response.json();
-                })
-                .then(function (session) {
-                    return stripe.redirectToCheckout({sessionId: session.id});
-                })
-                .then(function (result) {
-                    // If redirectToCheckout fails due to a browser or network
-                    // error, you should display the localized error message to your
-                    // customer using error.message.
-                    if (result.error) {
-                        alert(result.error.message);
-                    }
-                })
-                .catch(function (error) {
-                    console.error("Error:", error);
-                });
-        });
-    </script>
+{#    <script type="text/javascript">#}
+{#        (function () {#}
+{#            var csrftoken = document.querySelector("[name=csrfmiddlewaretoken]").value;#}
+{#            // Create an instance of the Stripe object with your publishable API key#}
+{#            var stripe = Stripe("pk_test_51KhkjnHgOFOjKM17Kvs8VZysMnxPrTWwhexv5g4lgq1hOlb1n4X1txtXzwUBaXVxdDKXmOxWIAv5di4i1oQNcJUL00AjqBdVSr");#}
+{#            var checkoutButton = document.getElementById("checkout-button");#}
+{#            checkoutButton.addEventListener("click", function () {#}
+{#                fetch("{% url 'create-checkout-session' %}", {#}
+{#                    method: "POST",#}
+{#                    headers: {#}
+{#                        "X-CSRFToken": csrftoken,#}
+{#                    },#}
+{#                }).then(function (response) {#}
+{#                    return response.json();#}
+{#                })#}
+{#                    .then(function (session) {#}
+{#                        return stripe.redirectToCheckout({sessionId: session.id});#}
+{#                    })#}
+{#                    .then(function (result) {#}
+{#                        if (result.error) {#}
+{#                            alert(result.error.message);#}
+{#                        }#}
+{#                    })#}
+{#                    .catch(function (error) {#}
+{#                        console.error("Error:", error);#}
+{#                    });#}
+{#            });#}
+{#        })();#}
+{#    </script>#}
 {% endblock %}
