Create Services UI

--- a/home_fix/users/templates/users/homepage.html
+++ b/home_fix/users/templates/users/homepage.html
@@ -85,7 +85,7 @@
                 buffalo. Chislic chicken short loin tongue, buffalo landjaeger leberkas. Burgdoggen sausage cupim
                 meatball pastrami beef.</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <button type="button" class="btn btn-primary btn-lg px-4 gap-3" onclick="location.href='#'">Offer
+                <button type="button" class="btn btn-primary btn-lg px-4 gap-3" onclick="location.href='{% url 'users:offer_service' %}'">Offer
                     Services
                 </button>
                 <button type="button" class="btn btn-outline-dark btn-lg px-4"
