--- a/home_fix/users/templates/users/layout.html
+++ b/home_fix/users/templates/users/layout.html
@@ -40,7 +40,7 @@
             </a>
 
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                <li><a href="#" class="nav-link px-2 text-white">Maps</a></li>
+                <li><a href="{% url 'users:search_hardware' %}" class="nav-link px-2 text-white">Maps</a></li>
                 <li><a href="{% url 'users:pricing' %}" class="nav-link px-2 text-white">Pricing</a></li>
                 <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
                 <li><a href="#" class="nav-link px-2 text-white">About</a></li>
