--- a/home_fix/users/templates/users/locs_hardware.html
+++ b/home_fix/users/templates/users/locs_hardware.html
@@ -13,22 +13,50 @@
   let map;
   let service;
   let infowindow;
+  const iconBase =
+    "https://developers.google.com/maps/documentation/javascript/examples/full/images/";
 
+    const icons = {
+    hardware: {
+      icon: iconBase + "info-i_maps.png",
+    },
+    users: {
+      icon: iconBase + "library_maps.png",
+    },
+
+    };
   function initMap() {
     //const sydney = new google.maps.LatLng(-33.867, 151.195);
-
+    var directionsService = new google.maps.DirectionsService();
+  var directionsRenderer = new google.maps.DirectionsRenderer();
     infowindow = new google.maps.InfoWindow();
-    var uluru = { lat: 40.7248172, lng: -73.9978925 };
+    var userlocations = eval("{{users|safe}}")
+    var locations = eval("{{user|safe}}");
+    var uluru = { lat: locations[0], lng: locations[1] };
+    
+    console.log(locations);
+    
     map = new google.maps.Map(document.getElementById("map"), {
       center: uluru,
       zoom: 15,
+      mapTypeId: google.maps.MapTypeId.ROADMAP
     });
-
-    var marker = new google.maps.Marker({
+    
+    let markeru = new google.maps.Marker({
       position: uluru,
+      icon: icons["users"].icon,
       map: map,
     });
-    var request = {
+    for (var i = 0; i < userlocations.length; i++) {
+      console.log(userlocations[i])
+      uluruusers = { lat: userlocations[i][0], lng: userlocations[i][1] };
+      var markerus = new google.maps.Marker({
+        position: uluruusers,
+        icon: icons["users"].icon,
+        map: map,
+      });
+    }
+    let request = {
       location: uluru,
       radius: '500',
       query: 'Harware Stores'
@@ -38,17 +66,62 @@
     service.textSearch(request, (results, status) => {
       if (status === google.maps.places.PlacesServiceStatus.OK && results) {
         for (let i = 0; i < results.length; i++) {
-          var mkr = { lat: results[i].geometry.location.lat(), lng: results[i].geometry.location.lng() };
-          var marker = new google.maps.Marker({
+          console.log(results[i]);
+          let mkr = { lat: results[i].geometry.location.lat(), lng: results[i].geometry.location.lng() };
+          let marker = new google.maps.Marker({
             position: mkr,
             map: map,
-          });
-        }
+            icon: icons["hardware"].icon,
+            title: "Hardware Store",
 
-        map.setCenter(results[0].geometry.location);
+            
+          });
+          const infowindow = new google.maps.InfoWindow({
+            content: results[i].name+" </br> Status:"+results[i].opening_hours.open_now,
+
+          });
+
+
+           marker.addListener('mouseover', function() {  
+          
+              infowindow.open(map, this);
+              //map.setCenter(marker.getPosition());
+          });
+          marker.addListener('mouseout', function() {
+              infowindow.close();
+          });
+          marker.addListener('click', function() {
+            //calcRoute(uluru, marker.getPosition());
+            directionsRenderer.setMap(map);
+            let request = {
+                origin: uluru,
+                destination: marker.getPosition(),
+                travelMode: 'DRIVING'
+              };
+
+              directionsService.route(request, function(result, status) {
+            if (status == 'OK') {
+              directionsRenderer.setDirections(result);
+            }else{
+              console.log("shit");
+            }
+            });
+          });
+          
+        }
+        
+
+
+
+       // map.setCenter(results[0].geometry.location);
       }
     });
+
+
+        
+
   }
+  
 
 
 </script>
