--- a/home_fix/users/templates/users/pricing.html
+++ b/home_fix/users/templates/users/pricing.html
@@ -37,9 +37,7 @@
         <header>
             <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
                 <h1 class="display-6 fw-normal">Choose the plan that's right for you</h1>
-                <p class="fs-5 text-muted">Quickly build an effective pricing table for your potential customers with
-                    this Bootstrap example. It’s built with default Bootstrap components and utilities with little
-                    customization.</p>
+
             </div>
         </header>
 
@@ -54,10 +52,9 @@
                             <h1 class="card-title pricing-card-title">$0<small class="text-muted fw-light">/mo</small>
                             </h1>
                             <ul class="list-unstyled mt-3 mb-4">
-                                <li>10 users included</li>
-                                <li>2 GB of storage</li>
-                                <li>Email support</li>
-                                <li>Help center access</li>
+                                <li>Initialize 100 coins</li>
+                                <li>20% commission fee</li>
+                                <li>Available to request service</li>
                             </ul>
                             <form action="{% url 'users:pricing' %}" method="post">
                                 {% csrf_token %}
@@ -78,10 +75,9 @@
                             <h1 class="card-title pricing-card-title">$100<small class="text-muted fw-light">/yr</small>
                             </h1>
                             <ul class="list-unstyled mt-3 mb-4">
-                                <li>20 users included</li>
-                                <li>10 GB of storage</li>
-                                <li>Priority email support</li>
-                                <li>Help center access</li>
+                                <li>Get 100 coins every month</li>
+                                <li>5% commission fee</li>
+                                <li>Priority support</li>
                             </ul>
                             {#                            <form action="{% url 'users:pricing' %}" method="post">#}
                             {#                                {% csrf_token %}#}
@@ -104,10 +100,9 @@
                             <h1 class="card-title pricing-card-title">$150<small class="text-muted fw-light">/yr</small>
                             </h1>
                             <ul class="list-unstyled mt-3 mb-4">
-                                <li>30 users included</li>
-                                <li>15 GB of storage</li>
-                                <li>Phone and email support</li>
-                                <li>Help center access</li>
+                                <li>Get 200 coins every month</li>
+                                <li>Waive commission fee</li>
+                                <li>Discount in Hardware Stores</li>
                             </ul>
                             {#                            <form action="{% url 'users:pricing' %}" method="post">#}
                             {#                                {% csrf_token %}#}
@@ -135,7 +130,7 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <th scope="row" class="text-start">Public</th>
+                        <th scope="row" class="text-start">Request Service</th>
                         <td>
                             <svg class="bi" width="24" height="24">
                                 <use xlink:href="#check"/>
@@ -153,7 +148,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row" class="text-start">Private</th>
+                        <th scope="row" class="text-start">Provide Service</th>
                         <td></td>
                         <td>
                             <svg class="bi" width="24" height="24">
@@ -170,25 +165,29 @@
 
                     <tbody>
                     <tr>
-                        <th scope="row" class="text-start">Permissions</th>
+                        <th scope="row" class="text-start">Coins</th>
                         <td>
-                            <svg class="bi" width="24" height="24">
-                                <use xlink:href="#check"/>
-                            </svg>
+                            100 coins
                         </td>
                         <td>
-                            <svg class="bi" width="24" height="24">
-                                <use xlink:href="#check"/>
-                            </svg>
+                            100 coins / Month
                         </td>
                         <td>
-                            <svg class="bi" width="24" height="24">
-                                <use xlink:href="#check"/>
-                            </svg>
+                           200 coins / Month
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row" class="text-start">Sharing</th>
+                        <th scope="row" class="text-start">Commission Fee</th>
+                        <td>20%</td>
+                        <td>
+                           5%
+                        </td>
+                        <td>
+                           -
+                        </td>
+                    </tr>
+                    <tr>
+                        <th scope="row" class="text-start">Priority Support</th>
                         <td></td>
                         <td>
                             <svg class="bi" width="24" height="24">
@@ -202,21 +201,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <th scope="row" class="text-start">Unlimited members</th>
-                        <td></td>
-                        <td>
-                            <svg class="bi" width="24" height="24">
-                                <use xlink:href="#check"/>
-                            </svg>
-                        </td>
-                        <td>
-                            <svg class="bi" width="24" height="24">
-                                <use xlink:href="#check"/>
-                            </svg>
-                        </td>
-                    </tr>
-                    <tr>
-                        <th scope="row" class="text-start">Extra security</th>
+                        <th scope="row" class="text-start">Discount in Hardware Stores</th>
                         <td></td>
                         <td></td>
                         <td>
