--- a/home_fix/users/templates/users/request_services.html
+++ b/home_fix/users/templates/users/request_services.html
@@ -93,99 +93,31 @@
 
 
     <!-- HARD CODED THE POSTS THAT HAVE TO BE CREATED DYNAMICALLY LATER USING JS/PY-->
-    <a class="service" style="text-decoration: None; color: black; padding:1%" name="Plumbing">
-        <div class="card shadow border-0 col-md-8 offset-md-2" onclick="alert('YET TO BUILD')" style="width: 65%">
-            <div class="card-body p-4">
-                <div class="badge bg-success bg-gradient rounded-pill mb-2 offset-md-1">PLUMBING</div>
-                <div class="h5 card-title mb-3 col-md-8 offset-md-2">Plumbing Service for 20 coins!</div>
-                <p class="card-text mb-0 col-md-8 offset-md-2">
-                    Hi, I am here to offer the service this month in the weekends for anything around 20-30 coins
-                    (depending on the distance to travel).
-                </p>
-            </div>
-            <div class="card-footer p-4 pt-0 bg-transparent border-top-0 col-md-4 offset-md-1">
-                <div class="d-flex align-items-end justify-content-between">
-                    <div class="d-flex align-items-center">
-                        <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d"
-                             alt="..."/>
-                        <div class="small">
-                            <div class="fw-bold">Kelly Rowan</div>
-                            <div class="text-muted">March 12, 2022</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </a>
-
-    <a class="service" style="text-decoration: None; color: black; padding:1%" name="wall fixing">
-        <div class="card shadow border-0 col-md-8 offset-md-2" onclick="alert('YET TO BUILD')" style="width: 65%">
-            <div class="card-body p-4">
-                <div class="badge bg-success bg-gradient rounded-pill mb-2 offset-md-1">WALL FIXING</div>
-                <div class="h5 card-title mb-3 col-md-8 offset-md-2">Painting/Fixing the wall for 40 coins!</div>
-                <p class="card-text mb-0 col-md-8 offset-md-2">I have some leftover white paints. If you need them,
-                    please hit me up. Only 40 coins for the service!</p>
-            </div>
-            <div class="card-footer p-4 pt-0 bg-transparent border-top-0 col-md-4 offset-md-1">
-                <div class="d-flex align-items-end justify-content-between">
-                    <div class="d-flex align-items-center">
-                        <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d"
-                             alt="..."/>
-                        <div class="small">
-                            <div class="fw-bold">John Dawn</div>
-                            <div class="text-muted">March 03, 2022</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </a>
-
-    <a class="service" style="text-decoration: None; color: black; padding:1%" name="wall fixing">
-        <div class="card col-md-8 offset-md-2 shadow border-0" onclick="alert('YET TO BUILD')" style="width: 65%">
-            <div class="card-body p-4">
-                <div class="badge bg-success bg-gradient rounded-pill mb-2 offset-md-1">WALL FIXING</div>
-                <div class="h5 card-title mb-3 col-md-8 offset-md-2">Wall Painting for 50 coins!</div>
-                <p class="card-text mb-0 col-md-8 offset-md-2">Over here to fix some walls with a brand new unused
-                    paints. Multicolors available. 50 Coins for the service!</p>
-            </div>
-            <div class="card-footer p-4 pt-0 bg-transparent border-top-0 col-md-4 offset-md-1">
-                <div class="d-flex align-items-end justify-content-between">
-                    <div class="d-flex align-items-center">
-                        <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d"
-                             alt="..."/>
-                        <div class="small">
-                            <div class="fw-bold">Bob Stanley</div>
-                            <div class="text-muted">Feb 22, 2022</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </a>
-
-    <a class="service" style="text-decoration: None; color: black; padding:1%" name="household">
-        <div class="card col-md-8 offset-md-2 shadow border-0" onclick="alert('YET TO BUILD')" style="width: 65%">
-            <div class="card-body p-4">
-                <div class="badge bg-success bg-gradient rounded-pill mb-2 offset-md-1">HOUSEHOLD APPLIANCES</div>
-                <div class="h5 card-title mb-3 col-md-8 offset-md-2">Any small appliance for 30 coins!</div>
-                <p class="card-text mb-0 col-md-8 offset-md-2">I am a part time electrician. I can come around in
-                    weekends and help you in fixing your household appliances.</p>
-            </div>
-            <div class="card-footer p-4 pt-0 bg-transparent border-top-0 col-md-4 offset-md-1">
-                <div class="d-flex align-items-end justify-content-between">
-                    <div class="d-flex align-items-center">
-                        <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d"
-                             alt="..."/>
-                        <div class="small">
-                            <div class="fw-bold">Cindy Romans</div>
-                            <div class="text-muted">March 20, 2022</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </a>
+{% for service in services%}
+<a class="service" style="text-decoration: None; color: black; padding:1%" name="{{ service.service_category }}">
+  <div class="card shadow border-0 col-md-8 offset-md-2" onclick="alert('YET TO BUILD')" style="width: 65%">
+      <div class="card-body p-4">
+          <div class="badge bg-success bg-gradient rounded-pill mb-2 offset-md-1">{{ service.service_category }}</div>
+              <div class="h5 card-title mb-3 col-md-8 offset-md-2">{{ service.service_category }}</div>
+          <div class="card-text mb-0 col-md-8 offset-md-2">
+              {{ service.service_description| safe }}
+          </div>
+      </div>
+      <div class="card-footer p-4 pt-0 bg-transparent border-top-0 col-md-4 offset-md-1">
+          <div class="d-flex align-items-end justify-content-between">
+              <div class="d-flex align-items-center">
+                  <img class="rounded-circle me-3" src="https://dummyimage.com/40x40/ced4da/6c757d"
+                       alt="..."/>
+                  <div class="small">
+                      <div class="fw-bold">{{ service.user.email }}</div>
+                      <div class="text-muted"> COINS CHARGED: {{ service.coins_charged }}</div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</a>
+{% endfor %}
 
     <!-- JS FOR DYNAMIC SEARCH -->
     <script>
